--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
 		</dependency>
 		<dependency>
 			<groupId>net.bootsfaces</groupId>
-			<artifactId>bootsfaces</artifactId>
+			<artifactId>bootsfaces4</artifactId>
 			<version>1.5.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
